applied spotless and removed magic numbers