@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 import java.util.*;
-
 import org.frankframework.insights.common.mapper.Mapper;
 import org.frankframework.insights.common.mapper.MappingException;
 import org.frankframework.insights.github.GitHubClient;
@@ -21,137 +20,144 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 public class MilestoneServiceTest {
 
-	@Mock GitHubRepositoryStatisticsService statisticsService;
-	@Mock GitHubClient gitHubClient;
-	@Mock Mapper mapper;
-	@Mock MilestoneRepository milestoneRepository;
+    @Mock
+    GitHubRepositoryStatisticsService statisticsService;
 
-	@InjectMocks
-	MilestoneService milestoneService;
+    @Mock
+    GitHubClient gitHubClient;
 
-	@Mock GitHubRepositoryStatisticsDTO statisticsDTO;
+    @Mock
+    Mapper mapper;
 
-	private Milestone milestone1, milestone2;
-	private MilestoneDTO milestoneDTO1, milestoneDTO2;
+    @Mock
+    MilestoneRepository milestoneRepository;
 
-	@BeforeEach
-	public void setUp() {
-		milestone1 = new Milestone();
-		milestone1.setId("m1");
-		milestone1.setNumber(1);
-		milestone1.setTitle("Milestone 1");
-		milestone1.setState(GitHubPropertyState.OPEN);
+    @InjectMocks
+    MilestoneService milestoneService;
 
-		milestone2 = new Milestone();
-		milestone2.setId("m2");
-		milestone2.setNumber(2);
-		milestone2.setTitle("Milestone 2");
-		milestone2.setState(GitHubPropertyState.CLOSED);
+    @Mock
+    GitHubRepositoryStatisticsDTO statisticsDTO;
 
-		milestoneDTO1 = new MilestoneDTO("m1", 1, "First", GitHubPropertyState.OPEN);
-		milestoneDTO2 = new MilestoneDTO("m2", 2, "Second", GitHubPropertyState.CLOSED);
-	}
+    private Milestone milestone1, milestone2;
+    private MilestoneDTO milestoneDTO1, milestoneDTO2;
 
+    @BeforeEach
+    public void setUp() {
+        milestone1 = new Milestone();
+        milestone1.setId("m1");
+        milestone1.setNumber(1);
+        milestone1.setTitle("Milestone 1");
+        milestone1.setState(GitHubPropertyState.OPEN);
 
-	@Test
-	public void injectMilestones_shouldSkipIfCountsEqual() throws MilestoneInjectionException, GitHubClientException {
-		when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
-		when(statisticsDTO.getGitHubMilestoneCount()).thenReturn(5);
-		when(milestoneRepository.count()).thenReturn(5L);
+        milestone2 = new Milestone();
+        milestone2.setId("m2");
+        milestone2.setNumber(2);
+        milestone2.setTitle("Milestone 2");
+        milestone2.setState(GitHubPropertyState.CLOSED);
 
-		milestoneService.injectMilestones();
+        milestoneDTO1 = new MilestoneDTO("m1", 1, "First", GitHubPropertyState.OPEN);
+        milestoneDTO2 = new MilestoneDTO("m2", 2, "Second", GitHubPropertyState.CLOSED);
+    }
 
-		verify(gitHubClient, never()).getMilestones();
-		verify(milestoneRepository, never()).saveAll(anySet());
-	}
+    @Test
+    public void injectMilestones_shouldSkipIfCountsEqual() throws MilestoneInjectionException, GitHubClientException {
+        when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
+        when(statisticsDTO.getGitHubMilestoneCount()).thenReturn(5);
+        when(milestoneRepository.count()).thenReturn(5L);
 
-	@Test
-	public void injectMilestones_shouldSaveAllMilestones() throws MilestoneInjectionException, GitHubClientException, MappingException {
-		Set<MilestoneDTO> DTOs = Set.of(milestoneDTO1, milestoneDTO2);
-		Set<Milestone> entities = Set.of(milestone1, milestone2);
-		List<Milestone> saved = List.of(milestone1, milestone2);
+        milestoneService.injectMilestones();
 
-		when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
-		when(statisticsDTO.getGitHubMilestoneCount()).thenReturn(3);
-		when(milestoneRepository.count()).thenReturn(2L);
-		when(gitHubClient.getMilestones()).thenReturn(DTOs);
-		when(mapper.toEntity(DTOs, Milestone.class)).thenReturn(entities);
-		when(milestoneRepository.saveAll(entities)).thenReturn(saved);
+        verify(gitHubClient, never()).getMilestones();
+        verify(milestoneRepository, never()).saveAll(anySet());
+    }
 
-		milestoneService.injectMilestones();
+    @Test
+    public void injectMilestones_shouldSaveAllMilestones()
+            throws MilestoneInjectionException, GitHubClientException, MappingException {
+        Set<MilestoneDTO> DTOs = Set.of(milestoneDTO1, milestoneDTO2);
+        Set<Milestone> entities = Set.of(milestone1, milestone2);
+        List<Milestone> saved = List.of(milestone1, milestone2);
 
-		verify(milestoneRepository).saveAll(entities);
-	}
+        when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
+        when(statisticsDTO.getGitHubMilestoneCount()).thenReturn(3);
+        when(milestoneRepository.count()).thenReturn(2L);
+        when(gitHubClient.getMilestones()).thenReturn(DTOs);
+        when(mapper.toEntity(DTOs, Milestone.class)).thenReturn(entities);
+        when(milestoneRepository.saveAll(entities)).thenReturn(saved);
 
-	@Test
-	public void injectMilestones_shouldThrowOnException() throws GitHubClientException {
-		when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
-		when(statisticsDTO.getGitHubMilestoneCount()).thenReturn(4);
-		when(milestoneRepository.count()).thenReturn(1L);
-		when(gitHubClient.getMilestones()).thenThrow(new RuntimeException("fail"));
+        milestoneService.injectMilestones();
 
-		assertThrows(MilestoneInjectionException.class, () -> milestoneService.injectMilestones());
-	}
+        verify(milestoneRepository).saveAll(entities);
+    }
 
-	@Test
-	public void getAllOpenMilestones_shouldReturnMappedSet() throws MappingException {
-		Set<Milestone> openMilestones = Set.of(milestone1);
-		Set<MilestoneResponse> responses = Set.of(
-				new MilestoneResponse("m1", 1, "First", GitHubPropertyState.OPEN)
-		);
-		when(milestoneRepository.findAllByState(GitHubPropertyState.OPEN)).thenReturn(openMilestones);
-		when(mapper.toDTO(openMilestones, MilestoneResponse.class)).thenReturn(responses);
+    @Test
+    public void injectMilestones_shouldThrowOnException() throws GitHubClientException {
+        when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
+        when(statisticsDTO.getGitHubMilestoneCount()).thenReturn(4);
+        when(milestoneRepository.count()).thenReturn(1L);
+        when(gitHubClient.getMilestones()).thenThrow(new RuntimeException("fail"));
 
-		Set<MilestoneResponse> result = milestoneService.getAllOpenMilestones();
+        assertThrows(MilestoneInjectionException.class, () -> milestoneService.injectMilestones());
+    }
 
-		assertEquals(1, result.size());
-		assertEquals("m1", result.iterator().next().id());
-	}
+    @Test
+    public void getAllOpenMilestones_shouldReturnMappedSet() throws MappingException {
+        Set<Milestone> openMilestones = Set.of(milestone1);
+        Set<MilestoneResponse> responses = Set.of(new MilestoneResponse("m1", 1, "First", GitHubPropertyState.OPEN));
+        when(milestoneRepository.findAllByState(GitHubPropertyState.OPEN)).thenReturn(openMilestones);
+        when(mapper.toDTO(openMilestones, MilestoneResponse.class)).thenReturn(responses);
 
-	@Test
-	public void getAllOpenMilestones_shouldReturnEmptyIfNoneOpen() throws MappingException {
-		when(milestoneRepository.findAllByState(GitHubPropertyState.OPEN)).thenReturn(Collections.emptySet());
-		when(mapper.toDTO(Collections.emptySet(), MilestoneResponse.class)).thenReturn(Collections.emptySet());
+        Set<MilestoneResponse> result = milestoneService.getAllOpenMilestones();
 
-		Set<MilestoneResponse> result = milestoneService.getAllOpenMilestones();
-		assertTrue(result.isEmpty());
-	}
+        assertEquals(1, result.size());
+        assertEquals("m1", result.iterator().next().id());
+    }
 
-	@Test
-	public void getAllOpenMilestones_shouldThrowMappingException() throws MappingException {
-		Set<Milestone> openMilestones = Set.of(milestone1);
-		when(milestoneRepository.findAllByState(GitHubPropertyState.OPEN)).thenReturn(openMilestones);
-		when(mapper.toDTO(anySet(), eq(MilestoneResponse.class))).thenThrow(new MappingException("failed mapping", null));
+    @Test
+    public void getAllOpenMilestones_shouldReturnEmptyIfNoneOpen() throws MappingException {
+        when(milestoneRepository.findAllByState(GitHubPropertyState.OPEN)).thenReturn(Collections.emptySet());
+        when(mapper.toDTO(Collections.emptySet(), MilestoneResponse.class)).thenReturn(Collections.emptySet());
 
-		assertThrows(MappingException.class, () -> milestoneService.getAllOpenMilestones());
-	}
+        Set<MilestoneResponse> result = milestoneService.getAllOpenMilestones();
+        assertTrue(result.isEmpty());
+    }
 
-	@Test
-	public void getAllMilestonesMap_shouldReturnMap() {
-		when(milestoneRepository.findAll()).thenReturn(List.of(milestone1, milestone2));
-		Map<String, Milestone> result = milestoneService.getAllMilestonesMap();
-		assertEquals(2, result.size());
-		assertEquals(milestone1, result.get("m1"));
-		assertEquals(milestone2, result.get("m2"));
-	}
+    @Test
+    public void getAllOpenMilestones_shouldThrowMappingException() throws MappingException {
+        Set<Milestone> openMilestones = Set.of(milestone1);
+        when(milestoneRepository.findAllByState(GitHubPropertyState.OPEN)).thenReturn(openMilestones);
+        when(mapper.toDTO(anySet(), eq(MilestoneResponse.class)))
+                .thenThrow(new MappingException("failed mapping", null));
 
-	@Test
-	public void getAllMilestonesMap_shouldReturnEmptyMapIfNoMilestones() {
-		when(milestoneRepository.findAll()).thenReturn(Collections.emptyList());
-		Map<String, Milestone> result = milestoneService.getAllMilestonesMap();
-		assertTrue(result.isEmpty());
-	}
+        assertThrows(MappingException.class, () -> milestoneService.getAllOpenMilestones());
+    }
 
-	@Test
-	public void checkIfMilestoneExists_shouldReturnMilestone() throws MilestoneNotFoundException {
-		when(milestoneRepository.findById("m1")).thenReturn(Optional.of(milestone1));
-		Milestone found = milestoneService.checkIfMilestoneExists("m1");
-		assertEquals(milestone1, found);
-	}
+    @Test
+    public void getAllMilestonesMap_shouldReturnMap() {
+        when(milestoneRepository.findAll()).thenReturn(List.of(milestone1, milestone2));
+        Map<String, Milestone> result = milestoneService.getAllMilestonesMap();
+        assertEquals(2, result.size());
+        assertEquals(milestone1, result.get("m1"));
+        assertEquals(milestone2, result.get("m2"));
+    }
 
-	@Test
-	public void checkIfMilestoneExists_shouldThrowIfNotFound() {
-		when(milestoneRepository.findById("notfound")).thenReturn(Optional.empty());
-		assertThrows(MilestoneNotFoundException.class, () -> milestoneService.checkIfMilestoneExists("notfound"));
-	}
+    @Test
+    public void getAllMilestonesMap_shouldReturnEmptyMapIfNoMilestones() {
+        when(milestoneRepository.findAll()).thenReturn(Collections.emptyList());
+        Map<String, Milestone> result = milestoneService.getAllMilestonesMap();
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    public void checkIfMilestoneExists_shouldReturnMilestone() throws MilestoneNotFoundException {
+        when(milestoneRepository.findById("m1")).thenReturn(Optional.of(milestone1));
+        Milestone found = milestoneService.checkIfMilestoneExists("m1");
+        assertEquals(milestone1, found);
+    }
+
+    @Test
+    public void checkIfMilestoneExists_shouldThrowIfNotFound() {
+        when(milestoneRepository.findById("notfound")).thenReturn(Optional.empty());
+        assertThrows(MilestoneNotFoundException.class, () -> milestoneService.checkIfMilestoneExists("notfound"));
+    }
 }
